Testing solution to fix contrast error

--- a/styles/hamburger.css
+++ b/styles/hamburger.css
@@ -30,6 +30,7 @@ color: whitesmoke;
 text-align: center;
 text-decoration: none;
 font-size: 20px;
+background-color: black;
 }
 
 /* Toggle Show/Hide Menu */
